app/src/editor/parser/PDSLParser.js
// Generated from PDSLParser.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var PDSLParserListener = require('./PDSLParserListener').PDSLParserListener;
var grammarFileName = "PDSLParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'test'", "'base'", "'screen'", "'screen per 1'", 
                     "'screen per 2'", "'#stylebutton'", "'#styleform'", 
                     "'#style'", null, "'include'", "'randomstimuli'", "'randomtask'", 
                     "'randomintuple'", "'randomscreen'", "'randompairs'", 
                     "'type'", "'educational'", "'newrow'", "'nopreviousbutton'", 
                     "'panel'", "'text'", "'task'", "'taskforstimuli'", 
                     "'stimulus'", "'values'", "'select'", "'valuesonrow'", 
                     "'checkboxvalues'", "'checkboxvaluesonrow'", "'scalevalues'", 
                     "'scale'", "'edit'", "'ranking2d'", "'ranking1d'", 
                     null, null, "'('", "')'", null, null, null, null, null, 
                     null, null, null, null, null, null, "';'" ];

var symbolicNames = [ null, "TEST", "BASE", "SCREEN", "SCREEN1", "SCREEN2", 
                      "STYLEBUTTON", "STYLEFORM", "STYLE", "COMMENT", "INCLUDE", 
                      "RANDOMSTIMULI", "RANDOMTASK", "RANDOMINTUPLE", "RANDOMSCREEN", 
                      "RANDOMPAIRS", "TYPE", "EDUCATIONAL", "NEWROW", "NOPREVIOUSBUTTON", 
                      "PANEL", "TEXT", "TASK", "TASKFORSTIMULI", "STIMULUS", 
                      "VALUES", "SELECT", "VALUESONROW", "CHECKBOXVALUES", 
                      "CHECKBOXVALUESONROW", "SCALEVALUES", "SCALE", "EDIT", 
                      "RANKING2D", "RANKING1D", "WS", "EOL1", "LB", "RB", 
                      "INT", "COMMA1", "IDENT", "ITEM", "STRING", "COMMA", 
                      "SPACE", "WS3", "EOL3", "ITEM2", "STRING2", "SEMICOLON", 
                      "SPACE2", "WS4", "EOL4", "WS2", "DESCRIPTION", "EOL2" ];

var ruleNames =  [ "document", "testdefinition", "description", "configsection", 
                   "type", "educational", "screensection", "screenconfig", 
                   "screen2", "screen1", "screen", "comment", "itemrow", 
                   "panel", "style", "styleform", "stylebutton", "text", 
                   "newrow", "stimulus", "task", "taskforstimuli", "ranking1d", 
                   "ranking2d", "field", "rfield", "valuerow", "values", 
                   "valuesr", "valuesc", "valuescr", "scalevalues", "scale", 
                   "edit" ];

function PDSLParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

PDSLParser.prototype = Object.create(antlr4.Parser.prototype);
PDSLParser.prototype.constructor = PDSLParser;

Object.defineProperty(PDSLParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

PDSLParser.EOF = antlr4.Token.EOF;
PDSLParser.TEST = 1;
PDSLParser.BASE = 2;
PDSLParser.SCREEN = 3;
PDSLParser.SCREEN1 = 4;
PDSLParser.SCREEN2 = 5;
PDSLParser.STYLEBUTTON = 6;
PDSLParser.STYLEFORM = 7;
PDSLParser.STYLE = 8;
PDSLParser.COMMENT = 9;
PDSLParser.INCLUDE = 10;
PDSLParser.RANDOMSTIMULI = 11;
PDSLParser.RANDOMTASK = 12;
PDSLParser.RANDOMINTUPLE = 13;
PDSLParser.RANDOMSCREEN = 14;
PDSLParser.RANDOMPAIRS = 15;
PDSLParser.TYPE = 16;
PDSLParser.EDUCATIONAL = 17;
PDSLParser.NEWROW = 18;
PDSLParser.NOPREVIOUSBUTTON = 19;
PDSLParser.PANEL = 20;
PDSLParser.TEXT = 21;
PDSLParser.TASK = 22;
PDSLParser.TASKFORSTIMULI = 23;
PDSLParser.STIMULUS = 24;
PDSLParser.VALUES = 25;
PDSLParser.SELECT = 26;
PDSLParser.VALUESONROW = 27;
PDSLParser.CHECKBOXVALUES = 28;
PDSLParser.CHECKBOXVALUESONROW = 29;
PDSLParser.SCALEVALUES = 30;
PDSLParser.SCALE = 31;
PDSLParser.EDIT = 32;
PDSLParser.RANKING2D = 33;
PDSLParser.RANKING1D = 34;
PDSLParser.WS = 35;
PDSLParser.EOL1 = 36;
PDSLParser.LB = 37;
PDSLParser.RB = 38;
PDSLParser.INT = 39;
PDSLParser.COMMA1 = 40;
PDSLParser.IDENT = 41;
PDSLParser.ITEM = 42;
PDSLParser.STRING = 43;
PDSLParser.COMMA = 44;
PDSLParser.SPACE = 45;
PDSLParser.WS3 = 46;
PDSLParser.EOL3 = 47;
PDSLParser.ITEM2 = 48;
PDSLParser.STRING2 = 49;
PDSLParser.SEMICOLON = 50;
PDSLParser.SPACE2 = 51;
PDSLParser.WS4 = 52;
PDSLParser.EOL4 = 53;
PDSLParser.WS2 = 54;
PDSLParser.DESCRIPTION = 55;
PDSLParser.EOL2 = 56;

PDSLParser.RULE_document = 0;
PDSLParser.RULE_testdefinition = 1;
PDSLParser.RULE_description = 2;
PDSLParser.RULE_configsection = 3;
PDSLParser.RULE_type = 4;
PDSLParser.RULE_educational = 5;
PDSLParser.RULE_screensection = 6;
PDSLParser.RULE_screenconfig = 7;
PDSLParser.RULE_screen2 = 8;
PDSLParser.RULE_screen1 = 9;
PDSLParser.RULE_screen = 10;
PDSLParser.RULE_comment = 11;
PDSLParser.RULE_itemrow = 12;
PDSLParser.RULE_panel = 13;
PDSLParser.RULE_style = 14;
PDSLParser.RULE_styleform = 15;
PDSLParser.RULE_stylebutton = 16;
PDSLParser.RULE_text = 17;
PDSLParser.RULE_newrow = 18;
PDSLParser.RULE_stimulus = 19;
PDSLParser.RULE_task = 20;
PDSLParser.RULE_taskforstimuli = 21;
PDSLParser.RULE_ranking1d = 22;
PDSLParser.RULE_ranking2d = 23;
PDSLParser.RULE_field = 24;
PDSLParser.RULE_rfield = 25;
PDSLParser.RULE_valuerow = 26;
PDSLParser.RULE_values = 27;
PDSLParser.RULE_valuesr = 28;
PDSLParser.RULE_valuesc = 29;
PDSLParser.RULE_valuescr = 30;
PDSLParser.RULE_scalevalues = 31;
PDSLParser.RULE_scale = 32;
PDSLParser.RULE_edit = 33;

function DocumentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PDSLParser.RULE_document;
    return this;
}

DocumentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DocumentContext.prototype.constructor = DocumentContext;

DocumentContext.prototype.testdefinition = function() {
    return this.getTypedRuleContext(TestdefinitionContext,0);
};

DocumentContext.prototype.screensection = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ScreensectionContext);
    } else {
        return this.getTypedRuleContext(ScreensectionContext,i);
    }
};

DocumentContext.prototype.configsection = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ConfigsectionContext);
    } else {
        return this.getTypedRuleContext(ConfigsectionContext,i);
    }
};

DocumentContext.prototype.comment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CommentContext);
    } else {
        return this.getTypedRuleContext(CommentContext,i);
    }
};

DocumentContext.prototype.enterRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.enterDocument(this);
	}
};

DocumentContext.prototype.exitRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.exitDocument(this);
	}
};




PDSLParser.DocumentContext = DocumentContext;

PDSLParser.prototype.document = function() {

    var localctx = new DocumentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, PDSLParser.RULE_document);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 68;
        this.testdefinition();
        this.state = 91;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.state = 70; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 69;
            		this.configsection();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 72; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,0, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            this.state = 77;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 74;
                    this.comment(); 
                }
                this.state = 79;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
            }

            this.state = 83;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PDSLParser.SCREEN) | (1 << PDSLParser.SCREEN1) | (1 << PDSLParser.SCREEN2) | (1 << PDSLParser.COMMENT) | (1 << PDSLParser.RANDOMSTIMULI) | (1 << PDSLParser.RANDOMTASK) | (1 << PDSLParser.RANDOMINTUPLE) | (1 << PDSLParser.RANDOMSCREEN) | (1 << PDSLParser.RANDOMPAIRS))) !== 0)) {
                this.state = 80;
                this.screensection();
                this.state = 85;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            break;

        case 2:
            this.state = 87; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 86;
                this.screensection();
                this.state = 89; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PDSLParser.SCREEN) | (1 << PDSLParser.SCREEN1) | (1 << PDSLParser.SCREEN2) | (1 << PDSLParser.COMMENT) | (1 << PDSLParser.RANDOMSTIMULI) | (1 << PDSLParser.RANDOMTASK) | (1 << PDSLParser.RANDOMINTUPLE) | (1 << PDSLParser.RANDOMSCREEN) | (1 << PDSLParser.RANDOMPAIRS))) !== 0));
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TestdefinitionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PDSLParser.RULE_testdefinition;
    return this;
}

TestdefinitionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TestdefinitionContext.prototype.constructor = TestdefinitionContext;

TestdefinitionContext.prototype.TEST = function() {
    return this.getToken(PDSLParser.TEST, 0);
};

TestdefinitionContext.prototype.description = function() {
    return this.getTypedRuleContext(DescriptionContext,0);
};

TestdefinitionContext.prototype.enterRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.enterTestdefinition(this);
	}
};

TestdefinitionContext.prototype.exitRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.exitTestdefinition(this);
	}
};




PDSLParser.TestdefinitionContext = TestdefinitionContext;

PDSLParser.prototype.testdefinition = function() {

    var localctx = new TestdefinitionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, PDSLParser.RULE_testdefinition);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 93;
        this.match(PDSLParser.TEST);
        this.state = 94;
        this.description();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DescriptionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PDSLParser.RULE_description;
    return this;
}

DescriptionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DescriptionContext.prototype.constructor = DescriptionContext;

DescriptionContext.prototype.DESCRIPTION = function() {
    return this.getToken(PDSLParser.DESCRIPTION, 0);
};

DescriptionContext.prototype.enterRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.enterDescription(this);
	}
};

DescriptionContext.prototype.exitRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.exitDescription(this);
	}
};




PDSLParser.DescriptionContext = DescriptionContext;

PDSLParser.prototype.description = function() {

    var localctx = new DescriptionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, PDSLParser.RULE_description);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 96;
        this.match(PDSLParser.DESCRIPTION);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConfigsectionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PDSLParser.RULE_configsection;
    return this;
}

ConfigsectionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConfigsectionContext.prototype.constructor = ConfigsectionContext;

ConfigsectionContext.prototype.BASE = function() {
    return this.getToken(PDSLParser.BASE, 0);
};

ConfigsectionContext.prototype.RANDOMSTIMULI = function() {
    return this.getToken(PDSLParser.RANDOMSTIMULI, 0);
};

ConfigsectionContext.prototype.RANDOMTASK = function() {
    return this.getToken(PDSLParser.RANDOMTASK, 0);
};

ConfigsectionContext.prototype.RANDOMSCREEN = function() {
    return this.getToken(PDSLParser.RANDOMSCREEN, 0);
};

ConfigsectionContext.prototype.RANDOMINTUPLE = function() {
    return this.getToken(PDSLParser.RANDOMINTUPLE, 0);
};

ConfigsectionContext.prototype.INCLUDE = function() {
    return this.getToken(PDSLParser.INCLUDE, 0);
};

ConfigsectionContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

ConfigsectionContext.prototype.comment = function() {
    return this.getTypedRuleContext(CommentContext,0);
};

ConfigsectionContext.prototype.IDENT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PDSLParser.IDENT);
    } else {
        return this.getToken(PDSLParser.IDENT, i);
    }
};


ConfigsectionContext.prototype.enterRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.enterConfigsection(this);
	}
};

ConfigsectionContext.prototype.exitRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.exitConfigsection(this);
	}
};




PDSLParser.ConfigsectionContext = ConfigsectionContext;

PDSLParser.prototype.configsection = function() {

    var localctx = new ConfigsectionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, PDSLParser.RULE_configsection);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 111;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case PDSLParser.BASE:
            this.state = 98;
            this.match(PDSLParser.BASE);
            break;
        case PDSLParser.RANDOMSTIMULI:
            this.state = 99;
            this.match(PDSLParser.RANDOMSTIMULI);
            break;
        case PDSLParser.RANDOMTASK:
            this.state = 100;
            this.match(PDSLParser.RANDOMTASK);
            break;
        case PDSLParser.RANDOMSCREEN:
            this.state = 101;
            this.match(PDSLParser.RANDOMSCREEN);
            break;
        case PDSLParser.RANDOMINTUPLE:
            this.state = 102;
            this.match(PDSLParser.RANDOMINTUPLE);
            break;
        case PDSLParser.INCLUDE:
            this.state = 103;
            this.match(PDSLParser.INCLUDE);
            this.state = 105; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 104;
                this.match(PDSLParser.IDENT);
                this.state = 107; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===PDSLParser.IDENT);
            break;
        case PDSLParser.TYPE:
            this.state = 109;
            this.type();
            break;
        case PDSLParser.COMMENT:
            this.state = 110;
            this.comment();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TypeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PDSLParser.RULE_type;
    return this;
}

TypeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TypeContext.prototype.constructor = TypeContext;

TypeContext.prototype.TYPE = function() {
    return this.getToken(PDSLParser.TYPE, 0);
};

TypeContext.prototype.educational = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EducationalContext);
    } else {
        return this.getTypedRuleContext(EducationalContext,i);
    }
};

TypeContext.prototype.NOPREVIOUSBUTTON = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(PDSLParser.NOPREVIOUSBUTTON);
    } else {
        return this.getToken(PDSLParser.NOPREVIOUSBUTTON, i);
    }
};


TypeContext.prototype.enterRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.enterType(this);
	}
};

TypeContext.prototype.exitRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.exitType(this);
	}
};




PDSLParser.TypeContext = TypeContext;

PDSLParser.prototype.type = function() {

    var localctx = new TypeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, PDSLParser.RULE_type);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 113;
        this.match(PDSLParser.TYPE);
        this.state = 116; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 116;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case PDSLParser.EDUCATIONAL:
                this.state = 114;
                this.educational();
                break;
            case PDSLParser.NOPREVIOUSBUTTON:
                this.state = 115;
                this.match(PDSLParser.NOPREVIOUSBUTTON);
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 118; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===PDSLParser.EDUCATIONAL || _la===PDSLParser.NOPREVIOUSBUTTON);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EducationalContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PDSLParser.RULE_educational;
    return this;
}

EducationalContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EducationalContext.prototype.constructor = EducationalContext;

EducationalContext.prototype.EDUCATIONAL = function() {
    return this.getToken(PDSLParser.EDUCATIONAL, 0);
};

EducationalContext.prototype.WS = function() {
    return this.getToken(PDSLParser.WS, 0);
};

EducationalContext.prototype.LB = function() {
    return this.getToken(PDSLParser.LB, 0);
};

EducationalContext.prototype.INT = function() {
    return this.getToken(PDSLParser.INT, 0);
};

EducationalContext.prototype.RB = function() {
    return this.getToken(PDSLParser.RB, 0);
};

EducationalContext.prototype.enterRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.enterEducational(this);
	}
};

EducationalContext.prototype.exitRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.exitEducational(this);
	}
};




PDSLParser.EducationalContext = EducationalContext;

PDSLParser.prototype.educational = function() {

    var localctx = new EducationalContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, PDSLParser.RULE_educational);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 120;
        this.match(PDSLParser.EDUCATIONAL);
        this.state = 122;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PDSLParser.WS) {
            this.state = 121;
            this.match(PDSLParser.WS);
        }

        this.state = 127;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PDSLParser.LB) {
            this.state = 124;
            this.match(PDSLParser.LB);
            this.state = 125;
            this.match(PDSLParser.INT);
            this.state = 126;
            this.match(PDSLParser.RB);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ScreensectionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PDSLParser.RULE_screensection;
    return this;
}

ScreensectionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ScreensectionContext.prototype.constructor = ScreensectionContext;

ScreensectionContext.prototype.screen2 = function() {
    return this.getTypedRuleContext(Screen2Context,0);
};

ScreensectionContext.prototype.screen1 = function() {
    return this.getTypedRuleContext(Screen1Context,0);
};

ScreensectionContext.prototype.screen = function() {
    return this.getTypedRuleContext(ScreenContext,0);
};

ScreensectionContext.prototype.screenconfig = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ScreenconfigContext);
    } else {
        return this.getTypedRuleContext(ScreenconfigContext,i);
    }
};

ScreensectionContext.prototype.itemrow = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ItemrowContext);
    } else {
        return this.getTypedRuleContext(ItemrowContext,i);
    }
};

ScreensectionContext.prototype.enterRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.enterScreensection(this);
	}
};

ScreensectionContext.prototype.exitRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.exitScreensection(this);
	}
};




PDSLParser.ScreensectionContext = ScreensectionContext;

PDSLParser.prototype.screensection = function() {

    var localctx = new ScreensectionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, PDSLParser.RULE_screensection);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 132;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PDSLParser.COMMENT) | (1 << PDSLParser.RANDOMSTIMULI) | (1 << PDSLParser.RANDOMTASK) | (1 << PDSLParser.RANDOMINTUPLE) | (1 << PDSLParser.RANDOMSCREEN) | (1 << PDSLParser.RANDOMPAIRS))) !== 0)) {
            this.state = 129;
            this.screenconfig();
            this.state = 134;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 138;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case PDSLParser.SCREEN2:
            this.state = 135;
            this.screen2();
            break;
        case PDSLParser.SCREEN1:
            this.state = 136;
            this.screen1();
            break;
        case PDSLParser.SCREEN:
            this.state = 137;
            this.screen();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 141; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 140;
        		this.itemrow();
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 143; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,13, this._ctx);
        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ScreenconfigContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PDSLParser.RULE_screenconfig;
    return this;
}

ScreenconfigContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ScreenconfigContext.prototype.constructor = ScreenconfigContext;

ScreenconfigContext.prototype.RANDOMSCREEN = function() {
    return this.getToken(PDSLParser.RANDOMSCREEN, 0);
};

ScreenconfigContext.prototype.RANDOMINTUPLE = function() {
    return this.getToken(PDSLParser.RANDOMINTUPLE, 0);
};

ScreenconfigContext.prototype.RANDOMPAIRS = function() {
    return this.getToken(PDSLParser.RANDOMPAIRS, 0);
};

ScreenconfigContext.prototype.RANDOMTASK = function() {
    return this.getToken(PDSLParser.RANDOMTASK, 0);
};

ScreenconfigContext.prototype.RANDOMSTIMULI = function() {
    return this.getToken(PDSLParser.RANDOMSTIMULI, 0);
};

ScreenconfigContext.prototype.comment = function() {
    return this.getTypedRuleContext(CommentContext,0);
};

ScreenconfigContext.prototype.enterRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.enterScreenconfig(this);
	}
};

ScreenconfigContext.prototype.exitRule = function(listener) {
    if(listener instanceof PDSLParserListener ) {
        listener.exitScreenconfig(this);
	}
};




PDSLParser.ScreenconfigContext = ScreenconfigContext;

PDSLParser.prototype.screenconfig = function() {
